# logmaster

./: .gitignore  LICENSE  README.md
docker/: Dockerfile.connect-mongodb  docker-compose.local.yml  run-local.sh
docker/mongo/: mongo-init.js
docs/: logmaster.drawio
logmaster-client/: README.md  pyproject.toml
logmaster-client/scripts/: sample_client.py
logmaster-server/: .gitignore  README.md  pyproject.toml
logmaster-server/scripts/: run_command.py
src/logmaster/client/: logger.py
src/logmaster/core/: config.py  logging.py  util.py
src/logmaster/core/producer/: client.py  message.py
src/logmaster/server/api/: app.py  exception_handler.py
src/logmaster/server/api/v1/: api.py
src/logmaster/server/api/v1/routers/: app_router.py  message_router.py
src/logmaster/server/cli/: entrypoints.py  init_cli.py  run_cli.py
src/logmaster/server/core/: mongodb.py
src/logmaster/server/core/kafka/connect/: client.py  service.py
src/logmaster/server/core/models/: document.py  dto.py  page.py  resource.py  search.py
src/logmaster/server/core/service/: app_service.py  message_service.py  pagination.py
src/logmaster/server/utils/: exception.py  logging_manager.py
