[build-system]
requires = ["setuptools >= 70.2"]
build-backend = "setuptools.build_meta"

[project]
name='logmaster-client'
version = '0.1'
description = "Log-Master client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'requests>=2.32.3',
    'pydantic>=2.5.2',
    'confluent-kafka>=2.4.0',
]

[tool.setuptools]
packages = ["logmaster", "logmaster.client", "logmaster.core"]

[tool.setuptools.package-dir]
logmaster = "../src/logmaster"
"logmaster.client" = "../src/logmaster/client"
"logmaster.core" = "../src/logmaster/core"
